crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/constructor_with_state_mutability/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 2

[TypeError 1558] Error: Constructor must be payable or non-payable, but is "view".
   ╭─[input.sol:8:5]
   │
 8 │     constructor() view {}
   │     ──────────┬──────────  
   │               ╰──────────── Error occurred here.
───╯

[TypeError 1558] Error: Constructor must be payable or non-payable, but is "pure".
    ╭─[input.sol:12:5]
    │
 12 │     constructor() pure {}
    │     ──────────┬──────────  
    │               ╰──────────── Error occurred here.
────╯
